# Integrative_docking_benchmark

./: README.md  installation.md  installation_and_running.md
archive/easal-dev/: CMakeLists.txt  README.md  helix-packing.pro  helix-packing.pro.orig  settings.ini
archive/easal-dev/doc/TOMS paper/: .hgignore  acmsmall.cls  intro.bib  nigms.bib
archive/easal-dev/doc/TOMS paper/User Guide/: CompleteUserGuide.tex  EASAL User Guide.tex  FinalUserGuide.tex
archive/easal-dev/doc/TOMS paper/User Guide/fig/toy/: 108529sweepinterior.eps
archive/easal-dev/doc/TOMS paper/sections/: Theory.tex.old  abstract.tex  concepts.tex  defs.tex  jgui.tex
archive/easal-dev/doc/TOMS paper/sections/fig/: CayleySpaces.eps  EASALJacobian.eps  Stratification.eps  Stratification_pink2.eps  contacts_pink_green.eps  dumbellcreationwindow2.eps  pctreeFlips.eps  pctreeFlipsPink.eps  pctreeSpaces_pink.eps  pctreeSpaces_pink2.eps  spaceboundaries.eps  sweepboundaries.eps
archive/easal-dev/doc/TOMS paper/sections/fig/toy/: 108529spaceview.eps
archive/easal-dev/files/source_files/: Node1.txt  Node1c.txt  desired distances trimer.txt  dist.txt  input.txt  output.txt  udist1.txt  udist3.txt  udist4.txt  udist57.txt  udist6.txt  udist9.txt  union desired distances dimer.txt
archive/easal-dev/include/Eigen/share/pkgconfig/: eigen3.pc
archive/easal-dev/include/Eigen/src/Eigen-build/: CMakeCache.txt  DartConfiguration.tcl  Eigen3Targets.cmake  Makefile  buildtests.sh  cdashtesting.cmake  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/Eigen/: Makefile
archive/easal-dev/include/Eigen/src/Eigen-build/bench/spbench/: Makefile  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/blas/: cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/blas/testing/: CTestTestfile.cmake  Makefile
archive/easal-dev/include/Eigen/src/Eigen-build/demos/: CTestTestfile.cmake  Makefile
archive/easal-dev/include/Eigen/src/Eigen-build/demos/mandelbrot/: Makefile
archive/easal-dev/include/Eigen/src/Eigen-build/demos/opengl/: quaternion_demo.moc_parameters
archive/easal-dev/include/Eigen/src/Eigen-build/doc/: Doxyfile  Makefile
archive/easal-dev/include/Eigen/src/Eigen-build/doc/examples/: Makefile  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/doc/snippets/: Makefile
archive/easal-dev/include/Eigen/src/Eigen-build/doc/special_examples/: Makefile
archive/easal-dev/include/Eigen/src/Eigen-build/language_tests/Fortran/: CMakeCache.txt  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/lapack/: CTestTestfile.cmake  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/scripts/: CTestTestfile.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/test/: Makefile  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/unsupported/: CTestTestfile.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/unsupported/Eigen/: Makefile  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/unsupported/Eigen/CXX11/: CTestTestfile.cmake  Makefile  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/unsupported/doc/: Makefile  cmake_install.cmake
archive/easal-dev/include/Eigen/src/Eigen-build/unsupported/doc/examples/: Makefile
archive/easal-dev/include/Eigen/tmp/: Eigen-cfgcmd.txt  Eigen-gitclone.cmake  Eigen-gitupdate.cmake
archive/easal-dev/include/gflags/tmp/: gflags-cfgcmd.txt  gflags-gitupdate.cmake
archive/easal-dev/include/glog/src/glog-build/: CMakeCache.txt  CPackConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cleanup_with_absolute_prefix_unittest  cmake_install.cmake  glog-modules.cmake  glog-targets.cmake  install_manifest.txt  stl_logging_unittest  symbolize_unittest  utilities_unittest
archive/easal-dev/include/glog/tmp/: glog-gitupdate.cmake
archive/easal-dev/scripts/: processLogs.sh  slurmExperimentScript.sh
archive/easal-dev/src/: CMakeLists.txt
archive/easal-dev/src/easalcore/: ActiveConstraintGraph.cpp  AlgorithmJacobianRec.cpp  AtlasBuilder.cpp  AtlasBuilderActor.cpp  AtlasNode.cpp  Atom.cpp  BasicStatistics.h  CMakeLists.txt  CartesianRealizer.cpp  CartesianRealizer.h  CayleyParameterization.cpp  CayleyPoint.h  CgMarker.cpp  CgMarker.h  ConstraintCheck.cpp  ConstraintCheck.h  ConvexChart.cpp  EventPointNode.cpp  EventPointNode.h  MolecularUnit.h  Orientation.cpp  PathFinder.cpp  PathFinder.h  PathfindingReturnTuple.cpp  PointSet.cpp  PointSet.h  RegionFlipNode.cpp  RegionFlipNode.h  Statistics.cpp  Statistics.h  Stree.h  Thread_BackEnd.h  Utils.h  WriterActor.cpp  miniball.h
archive/easal-dev/src/gui_Qt/: AboutWindow.cpp  AboutWindow.h  AdvancedOptionWindow.cpp  AdvancedOptionWindow.h  AtlasViewWidget.cpp  Bondviewwidget.cpp.autosave  Bondviewwidget.h.autosave  Camera.h  CayleyPointRenderingWrapper.cpp  CayleySpaceViewWidget.cpp  CayleySpaceViewWidget.h  CayleyStatisticsWindow.cpp  CayleyStatisticsWindow.h  ConstraintSelectionMoleculeViewWidget.h  ConstraintSelectionWindow.h  CustomSlider.h  InputWindow.cpp  InputWindow.h  MainWindow.cpp  MainWindow.h  Mesh3D.cpp  Mesh3D.h  NodeParentChildernViewWidget.cpp  PathfindingViewWidget3DPart.cpp  PseudoAtlasWindow.cpp  RealisationViewWidget.h  Renderer.cpp  Renderer.h  SharedDataGUI.cpp  SharedDataGUI.h  StatsWindow.cpp  StatsWindow.h
archive/easal-dev/test/: CMakeLists.txt
archive/easal-dev/test/data/: RoadMap.txt
archive/easal-dev/test/src/: ActiveConstraintRegionTest.cpp  AtlasNodeTest.cpp  feature_tests.cpp  jacobian_tests.cpp
easal-dev/: CAF Workflow.txt  easal.doxygen  settings.ini
example/: README.md
inputs/: README.md
scripts/: 1_processing_jwalk_output.py  2_getting_random_xlinks.py  README.md  analysis_trajectories.py  density.txt  end_to_end_analysis.py  extract_residues_change_chain_name.sh  get_selected_regions_from_AF2_structure.py  jwalk_output.py  main.py  master_script.sh  master_script_imp.sh  master_script_simulated_crosslinks.sh  processing_jwalk_output.py  run_analysis_trajectories.py  run_extract_models.py  sampcon.sh  sample_imp.py
(+470 files in other folders)
